# hermes-edge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  hf_model_config.json  index.html  model_card.md  pyproject.toml  requirements.txt  requirements_space.txt  space_app.py  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  runtime-taste-audit.yml  stale.yml
config/: routing.yaml
data/: agentic_sft.example.jsonl  eval.jsonl  tool_eval.jsonl  workflow_agent_fixture.json
docs/: ARCHITECTURE.md  BENCHMARK_CONTRACT.md  GOOGLE_EDGE_STRATEGY.md  RAVEN_EVIDENCE_GRAPH.md  RAVEN_TOKEN_ECONOMY.md
examples/: README.md  hello_hermes.py
hermes/: __init__.py  agent.py  chat_template.py  cli.py  code_executor.py  config.py  demo_inference.py  edge_policy.py  exceptions.py  inference.py  kv_cache.py  litert_model.py  mcp_client.py  mcp_server.py  memory.py  model.py  quantization.py  rag.py  router.py  web_search.py  workflow_benchmark.py
scripts/: __init__.py  bench_smoothness.py  benchmark.py  benchmark_bfcl.py  convert_hf_to_litertlm.py  convert_to_litertlm.py  deepseek_reasoning_template.py  distill_from_gemma.py  dspark_draft.py  eval.py  hermes_tool_format.py  public_release_check.py  train.py  train_tokenizer.py  workflow_benchmark.py
skills/hermes_calculator/: SKILL.md
skills/hermes_memory/: SKILL.md
skills/hermes_timer/: SKILL.md
skills/hermes_web_search/: SKILL.md
src/: main.py  model_wrapper.py  router.py  specialists.py
tests/: test_agent_edge_routing.py  test_cli_entrypoint.py  test_edge_policy.py  test_inference.py  test_kv_cache.py  test_litert_backend.py  test_model.py  test_public_release_check.py  test_quantization.py  test_workflow_benchmark.py
